simplified analysis for autosuspend actuals

--- a/notebooks/dev/autosuspend_monitoring.ipynb
+++ b/notebooks/dev/autosuspend_monitoring.ipynb
@@ -73,9 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_sql(\"set lookback_days=10\")\n",
+    "run_sql(\"set lookback_days=60\")\n",
     "\n",
-    "wh_name = 'XOGRP_DEV_WH'\n",
+    "# wh_name = 'XOGRP_DEV_WH'\n",
+    "wh_name = 'SEGMENT_LOAD_WH'\n",
     "wh_profile = f\"\"\"\n",
     "select \n",
     "    *,\n",
@@ -296,18 +297,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wpsimdf.columns"
+    "itables.show(wpsimdf)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adeb4b6f-81f0-491a-954c-2b9e08063243",
+   "id": "a05442fb-d1d4-4161-b4fd-c5c0ccbf7608",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%markdown\n",
-    "# Idle Time, Suspension Lag, Savings Estimates"
+    "import plotly.express as px\n",
+    "\n",
+    "fig = px.bar(wpsimdf, x=\"hour_start\", y='dollars_used_compute')\n",
+    "fig.show()"
    ]
   },
   {
@@ -319,9 +322,12 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
+    "fig = px.scatter(wedf, x=\"timestamp\", y=\"source\")\n",
+    "fig.show()\n",
     "\n",
     "fig = px.line(sdf, x=\"hour\", y=[\"suspend_lag_avg\", 'suspend_lag_max', 'suspend_lag_min', 'suspend_lag_median'])\n",
     "fig.show()\n",
+    "\n",
     "\n",
     "fig = px.bar(sdf, x=\"hour\", y='num_suspensions')\n",
     "fig.show()\n",
@@ -347,6 +353,17 @@
     "fig = px.line(wpsimdf, x=\"hour_start\", y=['annualized_credits_saved_projected_pessimistic', 'annualized_credits_saved_projected_upperbound'])\n",
     "fig.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adeb4b6f-81f0-491a-954c-2b9e08063243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%markdown\n",
+    "# Idle Time, Suspension Lag, Savings Estimates"
    ]
   },
   {
@@ -508,8 +525,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sh \n",
-    "jupyter nbconvert --to html autosuspend_monitoring.ipynb --no-input --output knot-autosuspend-analysis"
+    "# %%sh \n",
+    "# jupyter nbconvert --to html autosuspend_monitoring.ipynb --no-input --output knot-autosuspend-analysis"
    ]
   },
   {
