--- a/notebooks/rakuten/knot-dba.ipynb
+++ b/notebooks/rakuten/knot-dba.ipynb
@@ -486,8 +486,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ce4adb24-ea8c-46b2-856a-a6b4fe76c709",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified SQL statement: insert into table as select * from c where column = 'value'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "sql_statement = \"insert into blah.blah.table as select * from a.b.c where column = 'value'\"\n",
+    "modified_sql = re.sub(r'(\\b(?:FROM|JOIN|INTO|TABLE)\\s+)\\w+\\.\\w+\\.', r'\\1', sql_statement, flags=re.IGNORECASE)\n",
+    "\n",
+    "print(\"Modified SQL statement:\", modified_sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "436cb2df-419a-4089-8bda-1646805307ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified SQL statement: select * c where column = 'value'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "sql_statement = \"select * from a.b.c where column = 'value'\"\n",
+    "modified_sql = re.sub(r'\\b(?:FROM|JOIN|INTO|TABLE)\\s+\\w+(?:\\.\\w+)+\\.', '', sql_statement, flags=re.IGNORECASE)\n",
+    "\n",
+    "print(\"Modified SQL statement:\", modified_sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "01f6fea7-5531-4f8a-9ef5-269546758897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hi.you.', 'a.b.', 'x.y.']\n",
+      "insert into t select * from c join z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "text = \"insert into hi.you.t select * from a.b.c join x.y.z\"\n",
+    "pattern = r'\\b(\\w+\\.\\w+\\.)'\n",
+    "\n",
+    "matches = re.findall(pattern, text)\n",
+    "\n",
+    "print(matches)\n",
+    "\n",
+    "modified_sql = re.sub(pattern, '', text, flags=re.IGNORECASE)\n",
+    "print(modified_sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fa92dd90-3f5a-45e1-9404-43bb0e6e6dec",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'parsed' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# print all column references (a and b)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m \u001b[43mparsed\u001b[49m\u001b[38;5;241m.\u001b[39mfind_all(exp\u001b[38;5;241m.\u001b[39mColumn):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(column\u001b[38;5;241m.\u001b[39malias_or_name)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'parsed' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0206e395-076c-43bd-a6c6-0ca2498da608",
    "metadata": {},
    "outputs": [],
    "source": []
