resizing analysis, autosuspend monitoring notebook

--- a/notebooks/dev/autosuspend_monitoring_simplified.ipynb
+++ b/notebooks/dev/autosuspend_monitoring_simplified.ipynb
@@ -73,10 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_sql(\"set lookback_days=60\")\n",
+    "run_sql(\"set lookback_days=23\")\n",
     "\n",
     "# run_sql(\"set wh_name='SEGMENT_LOAD_WH' \")\n",
-    "run_sql(\"set wh_name='XOGRP_DEV_WH' \")\n",
+    "run_sql(\"set wh_name='SEGMENT_WH' \")\n",
     "\n",
     "run_sql(\"set date_part = 'hour'; \")\n",
     "\n",
@@ -100,7 +100,7 @@
     "        -- date_trunc(hour, timestamp) as day,    \n",
     "        -- event_reason || ':' || nvl(role_name, 'null') as source,\n",
     "        count(*) as num_suspensions,\n",
-    "        count_if(role_name='OPTIML_SVC') as num_aero_suspensions,\n",
+    "        count_if(role_name='AERO_ROLE') as num_aero_suspensions,\n",
     "        num_suspensions - num_aero_suspensions num_nonaero_suspensions,\n",
     "        100*num_aero_suspensions/num_suspensions as pct_aero_suspensions\n",
     "    from stg_warehouse_events_history \n",
@@ -468,8 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%sh \n",
-    "# jupyter nbconvert --to html autosuspend_monitoring_simplified.ipynb --output xo_grp_dev_wh"
+    "%%sh \n",
+    "jupyter nbconvert --to html autosuspend_monitoring_simplified.ipynb --output segment_wh"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace *.ipynb"
+    "# jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace *.ipynb"
    ]
   },
   {
